--- a/content/credits.njk
+++ b/content/credits.njk
@@ -15,11 +15,10 @@ description: Sources and inpirations for assets and tools used on this site.
 		<li><a href="https://projects.verou.me/css3patterns/" target="_blank">Squiggly background gradient</a> by Lea Verou</li>
 		<li>Avatar by <a href="https://alexboucher.carbonmade.com/">flowerveil</a>, commisioned many moons ago</li>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
-		<li>Site heading font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
+		<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 		<li>Built using <a href="https://www.11ty.dev/" target="_blank">eleventy</a> static site generator</li>
-		<li>Source code is on <a href="https://neocities.org" target="_blank">Github</a></li>
-		<li>Hosted on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Neocities</a></li>
-		<li>I followed the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">Deploy to Neocities guide</a> get deployments set up from Github to Neocities</li>
+		<li>Source code is on <a href="https://github.com/CupOfTegan/frills-neocities" target="_blank">Github</a></li>
+		<li>Hosted on <a href="https://neocities.org" target="_blank">Neocities</a> using the <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy to Neocities guide</a></li>
 		<li>Coded in <a href="https://code.visualstudio.com/download" target="_blank">VSCode</a></li>
 		<li>Tested in <a href="https://www.mozilla.org/en-GB/firefox/new/" target="_blank">Firefox</a> on Windows 11 and Mac OS Catalina</li>
 	</ul>
