--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -7,13 +7,5 @@
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    {#- <link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}"> -#}
-    {#- CSS bundles via `eleventy-plugin-bundle` https://github.com/11ty/eleventy-plugin-bundle -#}
-    {%- css "preload" %}{% include "public/css/variables.css" %}{% endcss %}
-    {%- css "preload" %}{% include "public/css/preload.css" %}{% endcss %}
-    <style>
-        {% getBundle "css", "preload" %}
-    </style>
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/new.css" rel="stylesheet">
 </head>
