--- a/content/credits.njk
+++ b/content/credits.njk
@@ -2,6 +2,10 @@
 title: Credits
 emoji: ' <span class="emoji" role="img" aria-label="Label">🏷️</span>'
 description: Sources and inpirations for assets and tools used on this site.
+eleventyNavigation:
+  key: Credits
+  emoji: ✨
+  order: 5
 ---
 {% extends 'page.njk'%}
 
@@ -9,7 +13,7 @@ description: Sources and inpirations for assets and tools used on this site.
 <section>
 	{{ macro.header(title + emoji ) }}
 
-	<ul>
+	<ul class="stars">
 		<li>Latest status is powered by <a href="https://status.cafe" target="_blank">status.cafe</a></li>
 		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">Last.fm last played script</a> by <a href="https://biancarosa.com.br/" target="_blank">Bianca Rosa</a></li>
 		<li><a href="https://projects.verou.me/css3patterns/" target="_blank">Squiggly background gradient</a> by Lea Verou</li>
